@@ -1,4 +1,8 @@
 2006-10-29  Don Allingham  <don@gramps-project.org>
+	* src/Lru.py: Added least-recently-used module from
+	the PyPE program
+	* src/DisplayModels/_PeopleModel.py: use LRU module to speed up
+	name displays
 	* configure.in: post 2.2.1 release update
 	* src/GrampsDb/_ReadXML.py: handle broken events
 	* help/C/gramps.xml: fix <warning>
